feat: More linkage between classes and symbols, objects, constantpool,...